--- a/index.html
+++ b/index.html
@@ -28,6 +28,55 @@
         font-family: "Manrope", sans-serif;
       }
     </style>
+    <!-- Common color -->
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                'primary-color-btn': '#FF4240',
+                'title-color': '#131318'
+              }
+            }
+          }
+        }
+      </script>
+    
   </head>
-  <body></body>
+  <body class="manrope-font">
+    <header class="container mx-auto">
+        <!-- Navbar section -->
+        <div class="navbar bg-base-100">
+            <div class="navbar-start">
+              <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                </div>
+                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                  <li><a>Home</a></li>
+                  <li><a>About</a></li>
+                  <li><a>Pages</a></li>
+                  <li><a>Blog</a></li>
+                  <li><a>Contact</a></li>
+                </ul>
+              </div>
+              <a class="text-2xl lg:text-4xl font-extrabold text-title-color">Hockeys <span class="text-primary-color-btn">’</span> s</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+              <ul class="menu menu-horizontal px-1 text-base">
+                <li><a>Home</a></li>
+                  <li><a>About</a></li>
+                  <li><a>Pages</a></li>
+                  <li><a>Blog</a></li>
+                  <li><a>Contact</a></li>
+              </ul>
+            </div>
+            <div class="navbar-end">
+                <i class="fa-solid fa-magnifying-glass mr-5 cursor-pointer"></i>
+              <a class="btn bg-primary-color-btn text-white font-semibold text-base lg:text-xl">Get Ticket</a>
+            </div>
+          </div>
+    </header>
+  </body>
 </html>
