--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     </header>
     <!-- main container -->
     <main class="container mx-auto">
+      <!-- Radial progress -->
       <div class="mt-20 lg:mt-40">
         <div class="text-center">
           <h1 class="text-3xl lg:text-4xl font-extrabold text-title-color">
@@ -147,13 +148,13 @@
           </h1>
           <p class="mt-3 text-base font-medium text-paragraph-color">
             "Professional Sajib Hockey Club: A dynamic and skilled team
-            dedicated to excelling in the sport of  <br /> hockey,
-            fostering professionalism, and creating a vibrant community of
-            passionate players."
+            dedicated to excelling in the sport of <br />
+            hockey, fostering professionalism, and creating a vibrant community
+            of passionate players."
           </p>
         </div>
         <div class="mt-20 grid grid-rows-1 lg:grid-cols-4 gap-4">
-          <div class="text-center  mb-5">
+          <div class="text-center mb-5">
             <!-- Radial 1 -->
             <div
               class="radial-progress text-red-500"
@@ -169,7 +170,7 @@
               Dedicated space for prayer.
             </p>
           </div>
-          <div class="text-center  mb-5">
+          <div class="text-center mb-5">
             <!-- Radial 2 -->
             <div
               class="radial-progress text-[#49D293]"
@@ -185,7 +186,7 @@
               Skilled mentor for peak performance.
             </p>
           </div>
-          <div class="text-center  mb-5">
+          <div class="text-center mb-5">
             <!-- Radial 3 -->
             <div
               class="radial-progress text-[#FFB546]"
@@ -201,7 +202,7 @@
               "Seasoned expert in their domain."
             </p>
           </div>
-          <div class="text-center  mb-5">
+          <div class="text-center mb-5">
             <!-- Radial 4 -->
             <div
               class="radial-progress text-[#4C8DF1]"
@@ -216,6 +217,36 @@
             <p class="text-base font-light text-paragraph-color">
               Training Ground: Skill development in focused spaces.
             </p>
+          </div>
+        </div>
+      </div>
+      <!-- programs section -->
+      <div class="mt-20 lg:mt-40">
+        <div class="text-center">
+          <h1 class="text-3xl lg:text-4xl font-extrabold text-title-color">
+            Professional Hockeys Club
+          </h1>
+          <p class="mt-3 text-base font-medium text-paragraph-color">
+            "Professional Sajib Hockey Club: A dynamic and skilled team
+            dedicated to excelling in the sport of <br />
+            hockey, fostering professionalism, and creating a vibrant community
+            of passionate players."
+          </p>
+        </div>
+        <div class="mt-20 grid grid-rows-1 lg:grid-cols-2 gap-4">
+          <div class="card  bg-base-100 shadow-xl image-full">
+            <figure><img src="./Images/2.png" alt="Shoes" class="w-full"/></figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl font-extrabold">Junior Program</h2>
+              <p class="text-base">
+                Explore the Junior Program on Sajib Hockey's website, fostering
+                young talents and nurturing a passion for hockey through
+                specialized training and development initiatives.
+              </p>
+              <div class="card-actions justify-start">
+                <button class="btn bg-primary-color-btn text-white">Register Now!</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
