done the programs sections

--- a/index.html
+++ b/index.html
@@ -234,17 +234,66 @@
           </p>
         </div>
         <div class="mt-20 grid grid-rows-1 lg:grid-cols-2 gap-4">
-          <div class="card  bg-base-100 shadow-xl image-full">
-            <figure><img src="./Images/2.png" alt="Shoes" class="w-full"/></figure>
-            <div class="card-body">
+          <!-- Grid 1 -->
+          <div class="card bg-base-100 shadow-xl image-full">
+            <figure>
+              <img src="./Images/2.png" alt="Shoes" class="w-full" />
+            </figure>
+            <div class="card-body mt-10">
               <h2 class="card-title text-3xl font-extrabold">Junior Program</h2>
-              <p class="text-base">
+              <p class="text-base mt-7">
                 Explore the Junior Program on Sajib Hockey's website, fostering
                 young talents and nurturing a passion for hockey through
                 specialized training and development initiatives.
               </p>
-              <div class="card-actions justify-start">
-                <button class="btn bg-primary-color-btn text-white">Register Now!</button>
+              <div class="card-actions justify-start mb-20 mt-5">
+                <button class="btn bg-primary-color-btn text-white border-0">
+                  Register Now!
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Grid 2 -->
+          <div class="card bg-base-100 shadow-xl image-full">
+            <figure>
+              <img src="./Images/3.png" alt="Shoes" class="w-full" />
+            </figure>
+            <div class="card-body mt-10">
+              <h2 class="card-title text-3xl font-extrabold">
+                Teenager Program
+              </h2>
+              <p class="text-base mt-7">
+                 Elevate young hockey enthusiasts with our
+                specialized training regimen, fostering skill development and
+                passion for the game on the Sajib Hockey platform.
+              </p>
+              <div class="card-actions justify-start mb-20 mt-5">
+                <button class="btn bg-primary-color-btn text-white border-0">
+                  Register Now!
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Grid 3 -->
+          <div
+            class="card col-span-full lg:row-span-2 bg-base-100 shadow-xl image-full h-[400px]"
+          >
+            <figure>
+              <img src="./Images/4.png" alt="Shoes" class="w-full" />
+            </figure>
+            <div class="card-body mt-10">
+              <h2 class="card-title text-3xl font-extrabold">
+                Professional Program
+              </h2>
+              <p class="text-base mt-7">
+                Sajib Hockey's Professional Program: Elevate your game <br> with
+                elite training and exclusive resources <br> tailored for aspiring
+                hockey enthusiasts.
+              </p>
+              <div class="card-actions justify-start mb-20 mt-5">
+                <button class="btn bg-primary-color-btn text-white border-0">
+                  Register Now!
+                </button>
               </div>
             </div>
           </div>
