contact area work start

--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
                 Teenager Program
               </h2>
               <p class="text-base mt-7">
-                 Elevate young hockey enthusiasts with our
-                specialized training regimen, fostering skill development and
-                passion for the game on the Sajib Hockey platform.
+                Elevate young hockey enthusiasts with our specialized training
+                regimen, fostering skill development and passion for the game on
+                the Sajib Hockey platform.
               </p>
               <div class="card-actions justify-start mb-20 mt-5">
                 <button class="btn bg-primary-color-btn text-white border-0">
@@ -286,9 +286,9 @@
                 Professional Program
               </h2>
               <p class="text-base mt-7">
-                Sajib Hockey's Professional Program: Elevate your game <br> with
-                elite training and exclusive resources <br> tailored for aspiring
-                hockey enthusiasts.
+                Sajib Hockey's Professional Program: Elevate your game <br />
+                with elite training and exclusive resources <br />
+                tailored for aspiring hockey enthusiasts.
               </p>
               <div class="card-actions justify-start mb-20 mt-5">
                 <button class="btn bg-primary-color-btn text-white border-0">
@@ -297,6 +297,379 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <!-- New products section-->
+      <div class="mt-20 lg:mt-40">
+        <div class="text-center">
+          <h1 class="text-3xl lg:text-4xl font-extrabold text-title-color">
+            Our New Products
+          </h1>
+          <p class="mt-3 text-base font-medium text-paragraph-color">
+            Our New Products: Explore the latest additions to the Sajib Hockey
+            lineup, <br />
+            enhancing your game with cutting-edge gear and equipment.
+          </p>
+        </div>
+        <div class="mt-20 grid grid-rows-1 lg:grid-cols-2 gap-4">
+          <!-- Products 1 -->
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure><img src="./Images/5.png" alt="Movie" /></figure>
+            <div class="card-body">
+              <div class="flex items-center text-paragraph-color">
+                <div class="mr-5">
+                  <i class="fa-solid fa-star text-[#F99808]"></i>
+                  <span>5.0</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-eye"></i>
+                  <span>20</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-heart"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h2 class="card-title text-xl text-title-color font-extrabold">
+                World Cup Jacket
+              </h2>
+              <p>
+                World Cup Jacket: Unleash your hockey <br />
+                style with Sajib's exclusive collection.
+              </p>
+              <div class="card-actions justify-start">
+                <h3 class="text-lg font-extrabold text-primary-color-btn">
+                  Price: $22.00
+                </h3>
+                <div class="flex items-center justify-center">
+                  <i class="fa-solid fa-cart-shopping text-paragraph-color"></i>
+                  <span class="text-base font-medium text-paragraph-color"
+                    >Delivery Fee : Free</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Products 2 -->
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure><img src="./Images/6.png" alt="Movie" /></figure>
+            <div class="card-body">
+              <div class="flex items-center text-paragraph-color">
+                <div class="mr-5">
+                  <i class="fa-solid fa-star text-[#F99808]"></i>
+                  <span>5.0</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-eye"></i>
+                  <span>20</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-heart"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h2 class="card-title text-xl text-title-color font-extrabold">
+                World Cup Flags Football
+              </h2>
+              <p>Dive into World Cup Flags Football excitement</p>
+              <div class="card-actions justify-start">
+                <h3 class="text-lg font-extrabold text-primary-color-btn">
+                  Price: $22.00
+                </h3>
+                <div class="flex items-center justify-center">
+                  <i class="fa-solid fa-cart-shopping text-paragraph-color"></i>
+                  <span class="text-base font-medium text-paragraph-color"
+                    >Delivery Fee : Free</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Products 3 -->
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure><img src="./Images/7.png" alt="Movie" /></figure>
+            <div class="card-body">
+              <div class="flex items-center text-paragraph-color">
+                <div class="mr-5">
+                  <i class="fa-solid fa-star text-[#F99808]"></i>
+                  <span>5.0</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-eye"></i>
+                  <span>20</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-heart"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h2 class="card-title text-xl text-title-color font-extrabold">
+                World Cup Flags Football
+              </h2>
+              <p>Dive into World Cup Flags Football excitement</p>
+              <div class="card-actions justify-start">
+                <h3 class="text-lg font-extrabold text-primary-color-btn">
+                  Price: $22.00
+                </h3>
+                <div class="flex items-center justify-center">
+                  <i class="fa-solid fa-cart-shopping text-paragraph-color"></i>
+                  <span class="text-base font-medium text-paragraph-color"
+                    >Delivery Fee : Free</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Products 4 -->
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure><img src="./Images/8.png" alt="Movie" /></figure>
+            <div class="card-body">
+              <div class="flex items-center text-paragraph-color">
+                <div class="mr-5">
+                  <i class="fa-solid fa-star text-[#F99808]"></i>
+                  <span>5.0</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-eye"></i>
+                  <span>20</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-heart"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h2 class="card-title text-xl text-title-color font-extrabold">
+                World Cup Flags Football
+              </h2>
+              <p>Dive into World Cup Flags Football excitement</p>
+              <div class="card-actions justify-start">
+                <h3 class="text-lg font-extrabold text-primary-color-btn">
+                  Price: $22.00
+                </h3>
+                <div class="flex items-center justify-center">
+                  <i class="fa-solid fa-cart-shopping text-paragraph-color"></i>
+                  <span class="text-base font-medium text-paragraph-color"
+                    >Delivery Fee : Free</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Products 5 -->
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure><img src="./Images/9.png" alt="Movie" /></figure>
+            <div class="card-body">
+              <div class="flex items-center text-paragraph-color">
+                <div class="mr-5">
+                  <i class="fa-solid fa-star text-[#F99808]"></i>
+                  <span>5.0</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-eye"></i>
+                  <span>20</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-heart"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h2 class="card-title text-xl text-title-color font-extrabold">
+                World Cup Flags Football
+              </h2>
+              <p>Dive into World Cup Flags Football excitement</p>
+              <div class="card-actions justify-start">
+                <h3 class="text-lg font-extrabold text-primary-color-btn">
+                  Price: $22.00
+                </h3>
+                <div class="flex items-center justify-center">
+                  <i class="fa-solid fa-cart-shopping text-paragraph-color"></i>
+                  <span class="text-base font-medium text-paragraph-color"
+                    >Delivery Fee : Free</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Products 6 -->
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure><img src="./Images/10.png" alt="Movie" /></figure>
+            <div class="card-body">
+              <div class="flex items-center text-paragraph-color">
+                <div class="mr-5">
+                  <i class="fa-solid fa-star text-[#F99808]"></i>
+                  <span>5.0</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-eye"></i>
+                  <span>20</span>
+                </div>
+                <div class="mr-5">
+                  <i class="fa-regular fa-heart"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h2 class="card-title text-xl text-title-color font-extrabold">
+                World Cup Flags Football
+              </h2>
+              <p>Dive into World Cup Flags Football excitement</p>
+              <div class="card-actions justify-start">
+                <h3 class="text-lg font-extrabold text-primary-color-btn">
+                  Price: $22.00
+                </h3>
+                <div class="flex items-center justify-center">
+                  <i class="fa-solid fa-cart-shopping text-paragraph-color"></i>
+                  <span class="text-base font-medium text-paragraph-color"
+                    >Delivery Fee : Free</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- client question section -->
+      <div class="mt-20 lg:mt-40">
+        <div class="text-center">
+          <h1 class="text-3xl lg:text-4xl font-extrabold text-title-color">
+            Clients Question
+          </h1>
+          <p class="mt-3 text-base font-medium text-paragraph-color">
+            Unveiling insights, FAQs, and expert advice on Sajib Hockey's
+            dedicated platform.
+          </p>
+        </div>
+        <div class="mt-20 grid grid-rows-1 lg:grid-cols-2">
+          <!-- img -->
+          <div>
+            <img src="./Images/11.png" alt="11" />
+          </div>
+          <!-- content -->
+          <div class="mt-5 lg:mt-0">
+            <h3 class="text-lg font-bold text-title-color">Our Equipment</h3>
+            <p class="mt-3 text-base font-medium text-paragraph-color">
+              Elevate your hockey game with top-tier gear showcased <br />
+              on the Sajib Hockey website. Explore premium equipment <br />
+              designed for performance excellence
+            </p>
+            <div class="mt-7">
+              <!-- tab 1 -->
+              <div
+                tabindex="0"
+                class="collapse lg:w-[480px] collapse-plus border border-base-300 bg-base-200"
+              >
+                <div class="collapse-title text-lg font-medium">
+                  Hockey Training
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Elevate your game with expert tips, drills, and gear
+                    recommendations on the Sajib Hockey website. Unleash your
+                    full potential on the ice!
+                  </p>
+                </div>
+              </div>
+              <!-- tab 2 -->
+              <div
+                tabindex="0"
+                class="collapse lg:w-[480px] collapse-plus border border-base-300 bg-base-200"
+              >
+                <div class="collapse-title text-lg font-medium">
+                  Private Lessons
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Elevate your hockey game with personalized coaching on
+                    Sajib's dedicated platform
+                  </p>
+                </div>
+              </div>
+              <!-- tab 3 -->
+              <div
+                tabindex="0"
+                class="collapse lg:w-[480px] collapse-plus border border-base-300 bg-base-200"
+              >
+                <div class="collapse-title text-lg font-medium">
+                  Ski Touring
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Sajib Hockey's Ski Touring: Explore the exhilarating fusion
+                    of hockey and the thrill of ski adventures on our dedicated
+                    platform.
+                  </p>
+                </div>
+              </div>
+              <!-- tab 4 -->
+              <div
+                tabindex="0"
+                class="collapse lg:w-[480px] collapse-plus border border-base-300 bg-base-200"
+              >
+                <div class="collapse-title text-lg font-medium">Booking</div>
+                <div class="collapse-content">
+                  <p>
+                    Seamlessly reserve your spot for thrilling hockey
+                    experiences on Sajib's dedicated website.
+                  </p>
+                </div>
+              </div>
+              <!-- tab 5 -->
+              <div
+                tabindex="0"
+                class="collapse lg:w-[480px] collapse-plus border border-base-300 bg-base-200"
+              >
+                <div class="collapse-title text-lg font-medium">Pricings</div>
+                <div class="collapse-content">
+                  <p>
+                    Explore exclusive offers and packages on Sajib Hockey's
+                    website for a personalized and affordable hockey experience.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- get in touch section -->
+      <div class="mt-20 lg:mt-40">
+        <div class="text-center">
+          <h1 class="text-3xl lg:text-4xl font-extrabold text-title-color">
+            Get In Touch
+          </h1>
+          <p class="mt-3 text-base font-medium text-paragraph-color">
+            Connect with Sajib Hockey for the latest <br> updates, inquiries, and a
+            shared passion for the game.
+          </p>
+        </div>
+        <!-- contact section -->
+        <div class="flex flex-col">
+          <!-- contact img 1 -->
+          <div class="mt-5">
+            <img src="./Images/Group 1171275317.png" alt="">
+            <div>
+              <p class="text-base font-medium text-paragraph-color">Phone Number : </p>
+              <h4 class="text-lg font-extrabold text-title-color">(+880) 1611-970979</h4>
+            </div>
+          </div>
+          <!-- contact img 2 -->
+          <div class="mt-5">
+            <img src="./Images/Group 1171275318.png" alt="">
+            <div>
+              <p class="text-base font-medium text-paragraph-color">Email :</p>
+              <h4 class="text-lg font-extrabold text-title-color">hockeys@support.com</h4>
+            </div>
+          </div>
+          <!-- contact img 3 -->
+          <div class="mt-5">
+            <img src="./Images/Group 1171275321.png" alt="">
+            <div>
+              <p class="text-base font-medium text-paragraph-color">Location : </p>
+              <h4 class="text-lg font-extrabold text-title-color">152/1 Mohakhali Wireless Gate</h4>
+            </div>
+          </div>
+        </div>
+        <!-- input contact area -->
+        <div>
+          
         </div>
       </div>
     </main>
