--- a/index.html
+++ b/index.html
@@ -636,40 +636,109 @@
             Get In Touch
           </h1>
           <p class="mt-3 text-base font-medium text-paragraph-color">
-            Connect with Sajib Hockey for the latest <br> updates, inquiries, and a
-            shared passion for the game.
+            Connect with Sajib Hockey for the latest <br />
+            updates, inquiries, and a shared passion for the game.
           </p>
         </div>
-        <!-- contact section -->
-        <div class="flex flex-col">
-          <!-- contact img 1 -->
-          <div class="mt-5">
-            <img src="./Images/Group 1171275317.png" alt="">
-            <div>
-              <p class="text-base font-medium text-paragraph-color">Phone Number : </p>
-              <h4 class="text-lg font-extrabold text-title-color">(+880) 1611-970979</h4>
+        <div class="grid grid-rows-1 lg:grid-cols-2">
+          <!-- contact section -->
+          <div class="flex flex-col">
+            <!-- contact img 1 -->
+            <div class="mt-5">
+              <img src="./Images/Group 1171275317.png" alt="" />
+              <div>
+                <p class="text-base font-medium text-paragraph-color">
+                  Phone Number :
+                </p>
+                <h4 class="text-lg font-extrabold text-title-color">
+                  (+880) 1611-970979
+                </h4>
+              </div>
+            </div>
+            <!-- contact img 2 -->
+            <div class="mt-5">
+              <img src="./Images/Group 1171275318.png" alt="" />
+              <div>
+                <p class="text-base font-medium text-paragraph-color">
+                  Email :
+                </p>
+                <h4 class="text-lg font-extrabold text-title-color">
+                  hockeys@support.com
+                </h4>
+              </div>
+            </div>
+            <!-- contact img 3 -->
+            <div class="mt-5">
+              <img src="./Images/Group 1171275321.png" alt="" />
+              <div>
+                <p class="text-base font-medium text-paragraph-color">
+                  Location :
+                </p>
+                <h4 class="text-lg font-extrabold text-title-color">
+                  152/1 Mohakhali Wireless Gate
+                </h4>
+              </div>
             </div>
           </div>
-          <!-- contact img 2 -->
-          <div class="mt-5">
-            <img src="./Images/Group 1171275318.png" alt="">
-            <div>
-              <p class="text-base font-medium text-paragraph-color">Email :</p>
-              <h4 class="text-lg font-extrabold text-title-color">hockeys@support.com</h4>
+          <!-- input contact area -->
+          <div class="mt-5 grid grid-rows-1 lg:grid-cols-2 gap-4">
+            <div class="flex flex-col">
+              <label class="text-xl text-title-color font-bold"
+                >Your Name</label
+              >
+              <input
+                type="text"
+                placeholder="Enter your full name"
+                class="mt-3 input input-bordered w-full max-w-xs"
+              />
+            </div>
+            <div class="flex flex-col">
+              <label class="text-xl text-title-color font-bold"
+                >Your Email</label
+              >
+              <input
+                type="text"
+                placeholder="Enter your email"
+                class="mt-3 input input-bordered w-full max-w-xs"
+              />
+            </div>
+            <div class="flex flex-col">
+              <label class="text-xl text-title-color font-bold">Subject</label>
+              <input
+                type="text"
+                placeholder="Enter your subject"
+                class="mt-3 input input-bordered w-full max-w-xs"
+              />
+            </div>
+            <div class="flex flex-col">
+              <label class="text-xl text-title-color font-bold"
+                >Phone Number</label
+              >
+              <input
+                type="text"
+                placeholder="Enter your phone number"
+                class="mt-3 input input-bordered w-full max-w-xs"
+              />
+            </div>
+            <div class="flex flex-col">
+              <label class="text-xl text-title-color font-bold"
+                >Your Message</label
+              >
+              <textarea
+                class="mt-3 lg:w-[650px] border-0 outline-none"
+                name="message"
+                id="message"
+                rows="5"
+                placeholder="Type your message here..."
+              ></textarea>
             </div>
           </div>
-          <!-- contact img 3 -->
-          <div class="mt-5">
-            <img src="./Images/Group 1171275321.png" alt="">
-            <div>
-              <p class="text-base font-medium text-paragraph-color">Location : </p>
-              <h4 class="text-lg font-extrabold text-title-color">152/1 Mohakhali Wireless Gate</h4>
-            </div>
+          <div>
+            <!--  -->
           </div>
-        </div>
-        <!-- input contact area -->
-        <div>
-          
+          <div>
+            <input class="mt-5 bg-primary-color-btn w-full text-white p-3 rounded-lg text-lg font-bold" type="submit" value="Send Message">
+          </div>
         </div>
       </div>
     </main>
