--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         </div>
         <div class="mt-20 grid grid-rows-1 lg:grid-cols-2 gap-4">
           <!-- Products 1 -->
-          <div class="card card-side bg-base-100 shadow-xl">
+          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
             <figure><img src="./Images/5.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -353,7 +353,7 @@
             </div>
           </div>
           <!-- Products 2 -->
-          <div class="card card-side bg-base-100 shadow-xl">
+          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
             <figure><img src="./Images/6.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -392,7 +392,7 @@
             </div>
           </div>
           <!-- Products 3 -->
-          <div class="card card-side bg-base-100 shadow-xl">
+          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
             <figure><img src="./Images/7.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -431,7 +431,7 @@
             </div>
           </div>
           <!-- Products 4 -->
-          <div class="card card-side bg-base-100 shadow-xl">
+          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
             <figure><img src="./Images/8.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -469,7 +469,7 @@
             </div>
           </div>
           <!-- Products 5 -->
-          <div class="card card-side bg-base-100 shadow-xl">
+          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
             <figure><img src="./Images/9.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -507,7 +507,7 @@
             </div>
           </div>
           <!-- Products 6 -->
-          <div class="card card-side bg-base-100 shadow-xl">
+          <div class="card flex-col lg:flex-row card-side bg-base-100 shadow-xl">
             <figure><img src="./Images/10.png" alt="Movie" /></figure>
             <div class="card-body">
               <div class="flex items-center text-paragraph-color">
@@ -663,7 +663,7 @@
           <!-- contact section -->
           <div class="flex flex-col">
             <!-- contact img 1 -->
-            <div class="mt-5">
+            <div class="mt-5 bg-[#BCED6D1A] p-3 rounded-lg lg:w-[400px]">
               <img src="./Images/Group 1171275317.png" alt="" />
               <div>
                 <p class="text-base font-medium text-paragraph-color">
@@ -675,7 +675,7 @@
               </div>
             </div>
             <!-- contact img 2 -->
-            <div class="mt-5">
+            <div class="mt-5 bg-[#FDDD5F1A] p-3 rounded-lg lg:w-[400px]">
               <img src="./Images/Group 1171275318.png" alt="" />
               <div>
                 <p class="text-base font-medium text-paragraph-color">
@@ -687,7 +687,7 @@
               </div>
             </div>
             <!-- contact img 3 -->
-            <div class="mt-5">
+            <div class="mt-5 bg-[#629CF31A] p-3 rounded-lg lg:w-[400px]">
               <img src="./Images/Group 1171275321.png" alt="" />
               <div>
                 <p class="text-base font-medium text-paragraph-color">
@@ -700,7 +700,7 @@
             </div>
           </div>
           <!-- input contact area -->
-          <div class="mt-5 grid grid-rows-1 lg:grid-cols-2 gap-4">
+          <div class="mt-5 grid grid-rows-1 lg:grid-cols-2 gap-4 p-1 lg:p-0">
             <div class="flex flex-col">
               <label class="text-xl text-title-color font-bold"
                 >Your Name</label
